--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,3 +6,58 @@
 #timezone-info, #horloge {
     margin-top: 20px;
 }
+
+
+/* Styles pour Clock 1 */
+.clock {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background: linear-gradient(145deg, #e6e6e6, #ffffff);
+    box-shadow:  20px 20px 60px #d9d9d9,
+                 -20px -20px 60px #ffffff;
+}
+
+.hour-hand, .minute-hand, .second-hand {
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    transform-origin: bottom;
+    transform: translateX(-50%) rotate(90deg);
+    transition: transform 0.5s ease-in-out;
+}
+
+.hour-hand {
+    width: 2%;
+    height: 25%;
+    border: solid 2px black;
+    z-index: 3;
+}
+
+.minute-hand {
+    width: 1%;
+    height: 35%;
+    border: solid 2px black;
+    z-index: 2;
+}
+
+.second-hand {
+    width: 0.5%;
+    height: 40%;
+    background-color: red;
+    z-index: 1;
+}
+
+.clock::before {
+    content: "";
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    background-color: white;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 4;
+}
