--- a/templates/map.html
+++ b/templates/map.html
@@ -9,7 +9,15 @@
 </head>
 <body>
     <h1>Carte interactive - Fuseau horaire</h1>
-    <div id="map"></div>
+    <div class="map-clock-container">
+        <div id="map"></div>
+        <div class="clock">
+            <div class="hour-hand"></div>
+            <div class="minute-hand"></div>
+            <div class="second-hand"></div>
+        </div>
+    </div>
+    
     <div id="timezone-info">
         <p><strong>Fuseau horaire :</strong> <span id="timezone">Aucun fuseau sélectionné</span></p>
     </div>
