feat: new feature download data

--- a/templates/map.html
+++ b/templates/map.html
@@ -36,6 +36,8 @@
             <p><strong>Vitesse du vent :</strong> <span id="wind_speed">N/A</span> m/s</p>
         </div>
 
+        <button id="download-button" onclick="downloadData()">Télécharger les données</button>
+
         <script src="../static/js/scripts.js"></script>
     </body>
 </html>
