Fix export data csv

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,10 @@
                 <div class="minute-hand"></div>
                 <div class="second-hand"></div>
             </div>
-            <p class="fuseau"><strong>Fuseau horaire :</strong> <span id="timezone">Europe-London</span></p>
+            <div class="info-lines">
+                <p class="fuseau"><strong>Fuseau horaire :</strong> <span id="timezone">Europe-London</span></p>
+                <p class="horloge"><strong>Heure actuelle :</strong> <span id="heureActuelle">00:00:00</span></p>
+            </div>
         </div>
     </div>
     <div id="weather-info">
